My Details page has an update form

--- a/res/FormBean.properties
+++ b/res/FormBean.properties
@@ -1,3 +1,6 @@
 
-errors.loginDetails.banner		= There were problems logging you in:
-errors.signUpDetails.banner		= There were problems signing you up:
+loginDetails.errors.banner			= There were problems logging you in:
+
+signUpDetails.errors.banner			= There were problems signing you up:
+
+repoUser.errors.banner				= There were problems saving your details:
