--- a/res/FormBean.properties
+++ b/res/FormBean.properties
@@ -4,3 +4,5 @@ loginDetails.errors.banner			= There were problems logging you in:
 signUpDetails.errors.banner			= There were problems signing you up:
 
 repoUser.errors.banner				= There were problems saving your details:
+
+podUploadDetails.errors.banner		= There were problems uploading your pod:
