WIP - pod delete

--- a/res/FormBean.properties
+++ b/res/FormBean.properties
@@ -6,3 +6,5 @@ signUpDetails.errors.banner			= There were problems signing you up:
 repoUser.errors.banner				= There were problems saving your details:
 
 podUploadDetails.errors.banner		= There were problems uploading your pod:
+
+PodDeleteDetails.errors.banner		= There were problems deleting your pod:
