--- a/res/FormBean.properties
+++ b/res/FormBean.properties
@@ -8,3 +8,4 @@ repoUser.errors.banner				= There were problems saving your details:
 podUploadDetails.errors.banner		= There were problems uploading your pod:
 
 PodDeleteDetails.errors.banner		= There were problems deleting your pod:
+PodDeleteDetails.field.podName.hint	= To confirm, enter the name of the pod you wish to delete. 
