username -> screenname added Git repo added cool config

--- a/res/FormBean.properties
+++ b/res/FormBean.properties
@@ -1,7 +1,9 @@
 
 loginDetails.errors.banner			= There were problems logging you in:
+loginDetails.field.password.hint	= Password may (but does not have to) contain numbers, letters, spaces and symbols. 
 
 signUpDetails.errors.banner			= There were problems signing you up:
+signUpDetails.field.password.hint	= Password may (but does not have to) contain numbers, letters, spaces and symbols.
 
 repoUser.errors.banner				= There were problems saving your details:
 
