--- a/res/FormBean.properties
+++ b/res/FormBean.properties
@@ -1,13 +1,18 @@
 
-loginDetails.errors.banner			= There were problems logging you in:
-loginDetails.field.password.hint	= Password may (but does not have to) contain numbers, letters, spaces and symbols. 
+loginDetails.field.password.hint		= Password may (but does not have to) contain numbers, letters, spaces and symbols. 
+loginDetails.errors.banner				= There were problems logging you in:
 
-signUpDetails.errors.banner			= There were problems signing you up:
-signUpDetails.field.password.hint	= Password may (but does not have to) contain numbers, letters, spaces and symbols.
+signUpDetails.field.password.hint		= Password may (but does not have to) contain numbers, letters, spaces and symbols.
+signUpDetails.errors.banner				= There were problems signing you up:
 
-repoUser.errors.banner				= There were problems saving your details:
+repoUser.field.gravatarEmail.hint		= If different to the main email address. 
+repoUser.errors.banner					= There were problems saving your details:
 
-podUploadDetails.errors.banner		= There were problems uploading your pod:
+podUploadDetails.errors.banner			= There were problems uploading your pod:
 
-PodDeleteDetails.errors.banner		= There were problems deleting your pod:
-PodDeleteDetails.field.podName.hint	= To confirm deletion, enter the pod's name. 
+podEditDetails.field.isPublic.hint		= Public pods are made available to everyone. 
+podEditDetails.field.isDeprecated.hint	= Deprecated pods, even if public, are not displayed in pod lists. 
+podEditDetails.field.isInternal.hint	= Internal pods are available to the public but may not be feature complete. 
+
+podDeleteDetails.field.podName.hint		= To confirm deletion, enter the pod's name. 
+podDeleteDetails.errors.banner			= There were problems deleting your pod:
