Users populate fields from Gravatar

--- a/res/FormBean.properties
+++ b/res/FormBean.properties
@@ -5,7 +5,8 @@ loginDetails.errors.banner				= There were problems logging you in:
 signUpDetails.field.password.hint		= Password may (but does not have to) contain numbers, letters, spaces and symbols.
 signUpDetails.errors.banner				= There were problems signing you up:
 
-repoUser.field.gravatarEmail.hint		= If different to the main email address. 
+repoUser.field.gravatarEmail.hint		= Enter if different to your main email address. 
+repoUser.field.aboutMe.hint				= Use Fandoc syntax. 
 repoUser.errors.banner					= There were problems saving your details:
 
 podUploadDetails.errors.banner			= There were problems uploading your pod:
