Nicer public form validation

--- a/res/FormBean.properties
+++ b/res/FormBean.properties
@@ -14,6 +14,7 @@ podUploadDetails.errors.banner			= There were problems uploading your pod:
 podEditDetails.field.isPublic.hint		= Public pods are made available to everyone. 
 podEditDetails.field.isDeprecated.hint	= Deprecated pods, even if public, are not displayed in pod lists. 
 podEditDetails.field.isInternal.hint	= Internal pods are available to the public but may not be feature complete. 
+podEditDetails.field.summary.hint		= Summaries generally don't include the pod name or project name
 
 podDeleteDetails.field.podName.hint		= To confirm deletion, enter the pod's name. 
 podDeleteDetails.errors.banner			= There were problems deleting your pod:
