Javascript tag toggle

--- a/res/FormBean.properties
+++ b/res/FormBean.properties
@@ -15,6 +15,7 @@ podEditDetails.field.isPublic.hint		= Public pods are made available to everyone
 podEditDetails.field.isDeprecated.hint	= Deprecated pods, even if public, are not displayed in pod lists. 
 podEditDetails.field.isInternal.hint	= Internal pods are available to the public but may not be feature complete. 
 podEditDetails.field.summary.hint		= Summaries generally don't include the pod name or project name
+podEditDetails.field.tags.hint			= A list of comma separated tag names 
 
 podDeleteDetails.field.podName.hint		= To confirm deletion, enter the pod's name. 
 podDeleteDetails.errors.banner			= There were problems deleting your pod:
